[package]
name = "cozodb-tantivy-cang-jie"
version = "0.15.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2021"
description = "A Chinese tokenizer for tantivy"
license = "MIT"
repository = "https://github.com/DCjanus/cang-jie"
readme = "README.MD"
keywords = ["search", "tokenizer", "Chinese", "tantivy"]

[dependencies]
tantivy = { version="0.19.0", path = "../tantivy-tokenizer", package = "cozodb-tantivy-tokenizer" }
jieba-rs = { version = "0.6.7", default-features = false }
log = "0.4.17"

[dev-dependencies]
flexi_logger = "0.25.1"

